updated nonlinear notes; need to simulate controller

--- a/RBOT101_2021/Notes/biblio.bib
+++ b/RBOT101_2021/Notes/biblio.bib
@@ -12,6 +12,16 @@ volume = {34},
 year = {1978}
 };
 
+@article{StengelHypersonic,
+  title={Robust nonlinear control of a hypersonic aircraft},
+  author={Wang, Qian and Stengel, Robert F},
+  journal={Journal of guidance, control, and dynamics},
+  volume={23},
+  number={4},
+  pages={577--585},
+  year={2000}
+}
+
 @misc{homeomorphic,
 author={Weisstein, Eric W.},
 title={Homeomorphic.}
