--- a/RBOT101_2021/Notes/rbot_101.tex
+++ b/RBOT101_2021/Notes/rbot_101.tex
@@ -113,10 +113,10 @@
 	\mainmatter
 %%
 \newpage
-%\input{sections/intro}
-%\input{sections/matrices}
-%\input{sections/vectors}
-%\input{sections/opt_rot}
+\input{sections/intro}
+\input{sections/matrices}
+\input{sections/vectors}
+\input{sections/opt_rot}
 \input{sections/state_est}
 
 %\input{sections/manip_kine}
