finish homeworks 5 and 6 solutions

--- a/RBOT101_2021/Notes/sections/vectors.tex
+++ b/RBOT101_2021/Notes/sections/vectors.tex
@@ -89,7 +89,7 @@ Further to the above, we define the following properties for inner product
 The above is an easy way to \textit{multiply} two vectors. The inner product is important because $\langle \bm{x}, \bm{x} \rangle$ can be considered as the square of the ``length" of the real vector $\bm{x}$. 
 %
 \begin{homework}
-	Prove that $\langle a\bm{x}+b \bm{y}, a\bm{x}+b \bm{y} \rangle = a^2 \langle \bm{x}, \bm{x} \rangle + 2 ab \langle \bm{x}, \bm{x} \rangle  + b^2 \langle \bm{y}, \bm{y} \rangle $ is a non-negative quadratic form in the scalar variables $a$ and $b$ if $\bm{x}$ and $\bm{y}$ are real.
+	Prove that $\langle a\bm{x}+b \bm{y}, a\bm{x}+b \bm{y} \rangle = a^2 \langle \bm{x}, \bm{x} \rangle + 2 ab \langle \bm{x}, \bm{y} \rangle  + b^2 \langle \bm{y}, \bm{y} \rangle $ is a non-negative quadratic form in the scalar variables $a$ and $b$ if $\bm{x}$ and $\bm{y}$ are real.
 \end{homework}
 %
 \begin{homework}
@@ -221,7 +221,7 @@ to describe the multiplication of a vector $\bm{x}$ by a matrix $X$.
 \begin{homework}
 	Show that 
 	\begin{align}
-		\langle Ax, Ax \rangle = \sum_{i=1}^{N} \left(\sum_{j=1}^{N} a_{ij}x_j\right)^2
+		\langle A \bm{x}, A \bm{x} \rangle = \sum_{i=1}^{N} \left(\sum_{j=1}^{N} a_{ij}x_j\right)^2
 	\end{align}
 \end{homework}
 
