--- a/RBOT101_2021/Notes/def.tex
+++ b/RBOT101_2021/Notes/def.tex
@@ -49,7 +49,6 @@
 \newcommand{\front}[1]{beg(#1)}
 \newcommand{\back}[1]{end(#1)}
 \newcommand{\stddev}{\sigma}
-\newcommand{\variance}{\stddev^2}
 \newcommand{\ifelse}[3]{\begin{cases}#1 \text{ if } #2\\#3 \text{ otherwise}\end{cases}}
 
 
@@ -70,23 +69,11 @@
 }
 
 
-\def\dof{\text{DOF }}
-\def\dofs{\text{DOFs }}
 \def\rot{{R}}
 \def\rthree{\bb{R}^3}
 \def\ren{\bb{R}^n}
-\def\disp{{d}}
-\def\homo{g}
-\def\homost{g_{st}}
 \def\skew{S}
 \def\jacob{J}
-\def\twistcoord{\xi}
-\def\twistmap{\hat{\xi}}
 \def\bodyform{\mathcal{B}}
 \def\identity{I}
-\newcommand{\fwdmap}[2]{{e^{\twistmap_{#1} #2_#1} }}
-\newcommand{\fwdmaptheta}[1]{{e^{\twistmap_{#1} \theta_#1} }}
-%\def\fwdmap[1]{e^{\twistmap_{#1} } }
-\def\coriolis{\textbf{\textit{C}}}
-\def\massinertia{\textbf{\textit{M}}}
-\def\torque{\bm{\tau}}
+\def\openset{\mathcal{O}}
