--- a/RBOT101_2021/Notes/sections/matrices.tex
+++ b/RBOT101_2021/Notes/sections/matrices.tex
@@ -110,7 +110,7 @@ and to have $Q(u,v)$ negative for all $u$ and $v$ on the unit circle, we must ha
 Introducing a Lagrange multiplier, $\lambda$, we can rewrite the problem as 
 %
 \begin{align}
-R(u,v) = aU^2 + 2buv + cv^2 - \lambda (u^2 + v^2).
+R(u,v) = au^2 + 2buv + cv^2 - \lambda (u^2 + v^2).
 \end{align}
 
 At the stationary points, we must have $\frac{\partial R}{\partial u} = \frac{\partial R}{\partial v} = 0$ so that
@@ -145,7 +145,7 @@ and as long as $a\neq 0$ and $b \neq 0$, the roots are distinct.
 If $b=0$, the roots of the quadratic in \eqref{eq:determinant} becomes $\lambda_1 = a$, $\lambda_2=c$. For $\lambda_1 = a$, the linear set of equations from \eqref{eq:linear} becomes 
 %
 \begin{align}
-	\left(a-\lambda_1\right) u = 0 \qquad \left(c-\lambda_1\right) v = 0
+	\left(a-\lambda_1\right) u = 0 \qquad \left(c-\lambda_2\right) v = 0
 \end{align}
 %
 which leaves $u$ arbitrary and $v=0$, if $a\neq c$.
